 - [DS-316] Make SWORD app:accepts configurable
 - [DS-318] JSPUI: Left over text in edit item about format
 - [DS-319] Replace '/dspace/bin/dsrun org.dspace.browse.ItemCounter' with /dspace/bin/itemcounter
 - [DS-327] SWORD temp upload directory missing trailling slash
 - [DS-328] SWORD service documents do not include atom:generator element

(Larry Stone)
 - [DS-254] Fix response for authorization failure on Bitstream when user is logged-in
 - [DS-232] Parse personal names correctly if there is no space after the last name
 - [DS-191] metadataschemaregistry_seq is not initialized correctly under Oracle
 - [DS-193] OAI RDF crosswalk fails when DC value is null
 - [DS-249] sub-daily utility script does not pass arguments to Java
 - [DS-252] Interpolate variables in the Subject: line of email templates as well
 - [DS-262] Bug in DS-118, new patch included
 - [DS-274] Typo in XSL breaks rendering of dri:xref with class
 - [DS-275] License files not listed on Item Summary page
 - [DS-276] Patch to fix spelling error in Exception page
 - [DS-280] build.xml fails for ant versions below 1.7

(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Andrea Bollini)
 - [DS-206] Input form visibility restriction doesn't work properly
 - [DS-199] SWORD module doesn't accept X-No-Op header (dry run)
 - [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
 - [DS-227] Values with double apos doesn't work in dropdown and list input type
 - [DS-259] Community/collection admin should not to be able to delete their admin group
 - [DS-261] Community Admin JSPUI: porting of the DS-228 patch
 - [DS-271] Make the OAI DC crosswalk configurable
 - [DS-260] Template item some times has owningCollection filled and some times not

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
 - [DS-238] Move item function in xmlui